# src/Controllers/UsuariosController.js
@@ -6,13 +6,13 @@ const prisma = new PrismaClient();
 const obtenerPadres = async (req, res) => {
     try {
         const usuarios = await prisma.usuarios.findMany({
-            where : {
-                Rol : "Padre"
+            where: {
+                Rol: "Padre"
             },
             include: {
                 TutorDe: true,
             },
-           
+
         });
 
         return res.json(usuarios);
@@ -22,82 +22,108 @@ const obtenerPadres = async (req, res) => {
     }
 }
 
-const crearUsuarios = async (req,res) =>{
-    
+const obtenerUsuarios = async (req, res) => {
+    try {
+        const usuarios = await prisma.usuarios.findMany({});
+
+        return res.json(usuarios);
+    } catch (error) {
+        console.error("Error al obtener usuarios:", error);
+        return res.status(500).json({ error: "Error interno del servidor" });
+    }
+}
+
+const crearUsuarios = async (req, res) => {
+
     const ContraseñaHasheada = await encrypt(req.body.Contrasena)
     req.body.Contrasena = ContraseñaHasheada
     const nuevoUsuario = await prisma.usuarios.create(
         {
-            data : req.body
-          }
+            data: {
+                Nombre : req.body.Nombre,
+                ApellidoP : req.body.ApellidoP,
+                ApellidoM : req.body.ApellidoP.ApellidoM,
+                CorreoElectronico : req.body.CorreoElectronico,
+                Contrasena : req.body.Contrasena,
+                FotoPerfil : req.body.FotoPerfil,
+                Id_Grupo : parseInt(req.body.Id_Grupo),
+                Rol : req.body.Rol,
+                Id_tutor : parseInt(req.body.Id_tutor)
+            }
+        }
     );
     if (!nuevoUsuario) {
-        return res.status(404).json({error : "No se pudo crear el usuario"})
+        return res.status(404).json({ error: "No se pudo crear el usuario" })
     }
     return res.json(nuevoUsuario)
 }
 
-const obtenerUsuarioPorId = async (req,res) =>{
+const obtenerUsuarioPorId = async (req, res) => {
     const usuario = await prisma.usuarios.findFirst({
-        where : {
-            Id : parseInt(req.params.id)
-        },
-        include : {
-            periodos:true,
-            grados : true,
-            grupos : true,
+        where: {
+            Id: parseInt(req.params.id)
         }
     });
     if (!usuario) {
-        return res.status(404).json({error : "Usuario no encontrado"})
+        return res.status(404).json({ error: "Usuario no encontrado" })
     }
     return res.json(usuario)
 }
 
-const editaUsuario = async (req, res) => {
-    const {Contrasena} = req.body
+let editaUsuario = async (req, res) => {
+    const { Contrasena } = req.body
     const ContraseñaHasheada = await encrypt(Contrasena)
     req.body.Contrasena = ContraseñaHasheada
     const usuarioEditado = await prisma.usuarios.findUnique({
-        where : {
-            Id : parseInt(req.params.id)
+        where: {
+            Id: parseInt(req.params.id)
         },
     })
     if (!usuarioEditado) {
-        return res.status(404).json({error : "Usuario no encontrado"})
+        return res.status(404).json({ error: "Usuario no encontrado" })
     }
-      await prisma.usuarios.update({
+    usuarioEditado = await prisma.usuarios.update({
         where: {
-          Id: parseInt(req.params.id)
+            Id: parseInt(req.params.id)
         },
-        data: req.body
-      });
+        data: {
+            Nombre : req.body.Nombre,
+            ApellidoP : req.body.ApellidoP,
+            ApellidoM : req.body.ApellidoM,
+            CorreoElectronico : req.body.CorreoElectronico,
+            Contrasena : req.body.Contrasena,
+            FotoPerfil : req.body.FotoPerfil,
+            Id_Grupo : parseInt(req.body.Id_Grupo),
+            Rol : req.body.Rol,
+            Id_tutor : parseInt(req.body.Id_tutor)
+        }
+    });
     return res.json(usuarioEditado)
-} 
+}
 
-const eliminarUsuario = async (req,res) =>{
+const eliminarUsuario = async (req, res) => {
     const usuarioEliminado = await prisma.usuarios.delete({
-        where:{
+        where: {
             Id: parseInt(req.params.id)
         }
     })
     if (!usuarioEliminado) {
-        return res.status(404).json({error : "Error al eliminar usuario"})
+        return res.status(404).json({ error: "Error al eliminar usuario" })
     }
     return res.json('Usuario Eliminado')
 }
-const obtenerHijos = async (req,res) => {
+const obtenerHijos = async (req, res) => {
     const usuario = await prisma.usuarios.findUnique({
-        where : {
-            Id : parseInt(req.params.id)
+        where: {
+            Id: parseInt(req.params.id)
         },
-        include :  {TutorDe : true}
+        include: { TutorDe: true }
     })
 
     if (!usuario) {
-        return res.status(404).json({ error : "Usuario no encontrado"})
+        return res.status(404).json({ error: "Usuario no encontrado" })
     }
-    else{
+    else {
         const hijos = usuario.TutorDe;
         return res.json(hijos)
     }
@@ -109,5 +135,6 @@ export {
     editaUsuario,
     eliminarUsuario,
     crearUsuarios,
-    obtenerHijos
+    obtenerHijos,
+    obtenerUsuarios
 }
